# WasmPy

./: .gitignore  Cargo.toml
.github/workflows/: ci.yml
crates/ast/: Cargo.toml
crates/ast/src/: expr.rs  lib.rs  op.rs  stmt.rs  types.rs
crates/parser/: Cargo.toml
crates/parser/src/: ast.rs  lexer.rs  lib.rs
crates/parser/src/parser/: binop.rs  expr.rs  helpers.rs  mod.rs  postfix.rs  statement.rs  type_hint.rs
crates/parser/src/tests/: mod.rs  parser_test.rs
crates/vm/: Cargo.toml
crates/vm/src/: error.rs  instruction.rs  lib.rs  vm.rs
crates/vm/src/builtin/: globals.rs  mod.rs  string.rs
crates/vm/src/compiler/: mod.rs  translate.rs  utils.rs
crates/vm/src/tests/: builtin_test.rs  mod.rs
crates/vm/src/vm/: instruction_handlers.rs  mod.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: functions.rs  lib.rs
crates/wasm/src/compiler/: control_flow.rs  data_access.rs  helpers.rs  literal.rs  mod.rs  op.rs  op_dispatch.rs
crates/wasm/src/tests/: compiler_tests.rs  mod.rs  type_checker_tests.rs
crates/wasm/src/type_checker/: mod.rs
crates/wasm/src/types/: mod.rs
src/: main.rs
