[workspace]
resolver = "2"
members=["crates/ast",
    "crates/parser", "crates/vm", "crates/wasm",
]

[workspace.package]
name="wasmpy"
edition="2024"
license="Apache-2.0"
version="0.1.0"

[workspace.dependencies]
anyhow = "1.0"
logos="0.16.1"
clap="4.5.60"
parser = { path = "crates/parser" }
ast = { path = "crates/ast" }
wasm = { path = "crates/wasm" }
vm = { path = "crates/vm" }
